--- a/Device_Manager/Resources/layout/Main.axml
+++ b/Device_Manager/Resources/layout/Main.axml
@@ -1,10 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/drawer_layout"
     android:orientation="vertical"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
-    android:id="@+id/drawer_layout">
+    android:fitsSystemWindows="true">
     <include
         layout="@layout/include_list_viewpager" />
     <android.support.design.widget.NavigationView
