--- a/Device_Manager/Resources/layout/Fragment3.axml
+++ b/Device_Manager/Resources/layout/Fragment3.axml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:padding="16dp">
@@ -8,8 +9,55 @@
         android:layout_height="wrap_content"
         android:layout_centerInParent="true"
         android:gravity="center"
-        android:text="Another Fragment"
+        android:text="Bitcoin to SEK converter"
         android:textSize="30sp"
         android:textColor="#333333"
         android:layout_gravity="top" />
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_centerInParent="true"
+        android:gravity="center"
+        android:text="@string/converterInfo"
+        android:textSize="17sp"
+        android:textColor="#333333"
+        android:layout_marginTop="45dp" />
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:layout_gravity="center"
+        android:weightSum="3">
+        <android.support.design.widget.TextInputLayout
+            android:id="@+id/intInputLayoutBitcoin"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1">
+            <EditText
+                android:id="@+id/txtBitcoin"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:inputType="number"
+                android:hint="Bitcoin" />
+        </android.support.design.widget.TextInputLayout>
+        <Button
+            android:id="@+id/btnConvert"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="Convert" />
+        <android.support.design.widget.TextInputLayout
+            android:id="@+id/intInputLayoutSEK"
+            android:layout_width="0dp"
+            android:layout_weight="1"
+            android:layout_height="wrap_content">
+            <EditText
+                android:id="@+id/txtSek"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:inputType="number"
+                android:hint="SEK" />
+        </android.support.design.widget.TextInputLayout>
+    </LinearLayout>
 </FrameLayout>
